--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3068,45 +3068,44 @@ a {
     margin-bottom: 1.4rem;
   }
 }
-.cid-sJwbtnBdj6 {
+.cid-sJxqbeKhGi {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
 @media (max-width: 767px) {
-  .cid-sJwbtnBdj6 .mbr-text {
+  .cid-sJxqbeKhGi .mbr-text {
     text-align: center;
   }
 }
-.cid-sJwbtnBdj6 .container-fluid {
+.cid-sJxqbeKhGi .container-fluid {
   padding: 0;
 }
-.cid-sJwbtnBdj6 .media-content {
+.cid-sJxqbeKhGi .media-content {
   max-width: 580px;
   margin: auto;
   padding: 1rem;
 }
-.cid-sJwbtnBdj6 img {
+.cid-sJxqbeKhGi img {
   height: 100%;
   object-fit: cover;
 }
-.cid-sJwbtnBdj6 .mbr-figure {
+.cid-sJxqbeKhGi .mbr-figure {
   height: 100%;
 }
-.cid-sJwbtnBdj6 .col-lg-6 {
+.cid-sJxqbeKhGi .col-lg-6 {
   padding: 0;
 }
-.cid-sJwbtnBdj6 .row {
+.cid-sJxqbeKhGi .row {
   margin: 0;
 }
-.cid-sJwbtnBdj6 .mbr-text,
-.cid-sJwbtnBdj6 .mbr-section-btn {
-  text-align: left;
-  color: #000000;
-}
-.cid-sJwbtnBdj6 H1 {
-  text-align: left;
+.cid-sJxqbeKhGi H1 {
   color: #103178;
+}
+.cid-sJxqbeKhGi .mbr-text,
+.cid-sJxqbeKhGi .mbr-section-btn {
+  color: #000000;
+  text-align: left;
 }
 .cid-sJw8d3a1Rh {
   padding-top: 60px;
