--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8285,6 +8285,7 @@ a {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
+  background: linear-gradient(45deg, #ffffff, #f0f2f5);
 }
 @media (max-width: 767px) {
   .cid-sK85lkyOza .mbr-text {
